Finished Tablet view, created and applied floating animation. Bug: need to fix main body and footer alignment. Deal with the empty space.

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,36 @@
+/* Floating animation */
+.floating-up-down{
+    animation: floating-up-down 3s ease-in-out infinite;
+}
+
+.animation-delay-1s{
+    animation-delay: 1s;
+}
+.animation-delay-2s{
+    animation-delay: 2s;
+}
+.animation-delay-3s{
+    animation-delay: 3s;
+}
+.animation-none{
+    animation:none;
+}
+
+
+@keyframes floating-up-down{
+    0% {
+        transform: translateY(0); /* Initial position */
+    }
+    50% {
+        transform: translateY(-5px); /* Move up by 10px */
+    }
+    100% {
+        transform: translateY(0); /* Move back to original position */
+    }
+}
+
+
+
 /* Utility classes */
 .font-sabon, p{
     font-family: 'Sabon Next LT', sans-serif;
@@ -82,6 +115,7 @@ footer a{
 button:hover {
     background-color: #E0E1DD; /* Corrected property */
     color: #533E2D;
+    animation: none;
 }
 
 #home-page-subheading{
